image additions and spacing alignments fixed

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ p {
     font-size: 17px;
     line-height: 26px;
 }
+span {
+	
+}
 .font-family{
 	font-family: 'Arimo', sans-serif;
 	font-weight: 700;
@@ -42,6 +45,11 @@ a {
 	color: #222;
 	background: transparent;
 	text-decoration:none;
+}
+@media (max-width: 767px){
+	.big {
+    font-size: 30px;
+}
 }
 /************* New Navigation ***************/
 .top-pad {
@@ -163,23 +171,40 @@ a:hover {
 
 	
 }
+@media (max-width: 450px){
+	.top-pad {
+    padding-top: 10px;
+}
+}
 .nav>li>a:focus, .nav>li>a:hover {
     text-decoration: none;
     background-color: transparent;
 }
 /************ Headings *******************/
 .main-hero{
-	padding-top: 110px;
+	margin-top: 110px;
+	margin-bottom: 50px;
 }
 
-
-
+@media (max-width: 767px){
+.main-hero {
+    margin-top: 50px;
+}
+}
 /************ The Work Sections *******************/
 .spacing{
 	margin-top: 40px;
 }
 .project-info {
 	margin-top: 25px;
+}
+.hero-single{
+	/*background-image: url(../portfolio-theme/img/post-hero.jpg);
+	background-size: cover;*/
+	width: 100%;
+	height: auto;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .responsive-images {
 	/*background-image: url(img/hpog.png);*/
@@ -510,7 +535,11 @@ padding-top: 10px;
 	font-size: .9em;
 	margin-top: 15px;
 }
-
+@media only screen and (max-width: 767px) {
+.left-media{
+	text-align: left !important;
+}
+}
 /**************animation preloader*************************/
 
 #loading{
